# dynamo-rp

./: README.ipynb  README.org  pyproject.toml
src/dynamo_rp/: dynamo_rp.py  hull_generation.py  parameters.py  params_gen.py  pdb_generation.py  rp_utility.py
