[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamo_rp"
version = "0.0.1"
requires-python = ">=3.7"
# classifiers = [
#     "Programming Language :: Rust",
#     "Programming Language :: Python :: Implementation :: CPython",
#     "Programming Language :: Python :: Implementation :: PyPy",
# ]

